syntax = "proto3";

option csharp_namespace = "GreeterServiceApp";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);

  rpc GetPow2 (SquareRequest) returns (SquareReply);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}


message SquareRequest { string input = 1; }

message SquareReply 
{
  string input = 1;
  string output = 2;
  string message = 3;
}